# web-blog-fastapi

./: LICENSE  pyproject.toml
src/app/: alembic.ini  main.py
src/app/api/: base.py
src/app/api/v1/: route_blog.py  route_user.py
src/app/core/: config.py  hashing.py
src/app/db/: base.py  session.py
src/app/db/models/: blog.py  user.py
src/app/db/repository/: blog.py  user.py
src/app/migrations/: env.py
src/app/migrations/versions/: 2024_05_02-create_user_and_blog_table_migrations.py
src/app/schemas/: blog.py
src/app/tests/: confest.py
